CruiseControl Status Menu Release Notes

Changes listed by release.

CCMenu 0.9.3

* Now showing a grey icon when project status unavailable
* Completely reworked server polling to be asynchronous and more resilient
* Added workaround for broken URLs provided by CruiseControl.rb
* Added remaining icons


CCMenu 0.9.2

* Version number displayed on project preferences pane
* Version number displayed in finder
* Fixed window ordering bug (#1777599) 


CCMenu 0.9.1

* Choose server combo box doesn't autocomplete
* Fixed CC.NET filename bug (#1775460)
* Fixed missing Growl notifications bug


CCMenu 0.9

* Basic version, release candidate for first public release.