@@ -5,6 +5,7 @@ Changes listed by release.
 CCMenu 0.9.3
 
 * Now showing a grey icon when project status unavailable
+* Project with unknown status is treated as if status was failure
 * Completely reworked server polling to be asynchronous and more resilient
 * Added workaround for broken URLs provided by CruiseControl.rb
 * Added remaining icons
